--- a/src/theme/base/bootstrap/tables.less
+++ b/src/theme/base/bootstrap/tables.less
@@ -48,3 +48,7 @@ table.table.table-clean {
         background-color: @white;
     }
 }
+
+table > tbody > tr > td.center-vertical {
+    vertical-align: middle !important;
+}
