WIP: dont allow edit of automatic lists
Change-Id: I48655989543c8d7a1ce28c0714ec62d510e49fde

--- a/src/app/worklists/template/detail.html
+++ b/src/app/worklists/template/detail.html
@@ -24,9 +24,9 @@
          ng-show="editing">
     </div>
     <hr ng-show="editing">
-    <div ng-show="permissions.editWorklist || permissions.moveItems"
+    <div ng-show="(permissions.editWorklist || permissions.moveItems) && !worklist.automatic"
          ng-include src="'/inline/worklist.html'"></div>
-    <div ng-show="!(permissions.editWorklist || permissions.moveItems)"
+    <div ng-show="!(permissions.editWorklist || permissions.moveItems) || worklist.automatic"
          ng-include src="'/inline/worklist_static.html'"></div>
 </div>
 
