--- a/src/app/storyboard/template/header_menu.html
+++ b/src/app/storyboard/template/header_menu.html
@@ -39,31 +39,41 @@
 
         <ul class="nav navbar-nav">
             <li>&nbsp;&nbsp;</li>
-            <li>
+            <li class="dropdown" dropdown>
                 <button type="button"
-                        class="btn btn-primary navbar-btn"
-                        ng-click="newStory()">
+                        class="btn btn-primary navbar-btn dropdown-toggle"
+                        dropdown-toggle>
                     <i class="fa fa-plus-circle"></i>
-                    New Story
+                    Create New...
+                    <i class="fa fa-caret-down"></i>
                 </button>
-            </li>
-            <li>&nbsp;&nbsp;</li>
-            <li>
-                <button type="button"
-                        class="btn btn-primary navbar-btn"
-                        ng-click="newWorklist()">
-                    <i class="fa fa-plus-circle"></i>
-                    New Worklist
-                </button>
-            </li>
-            <li>&nbsp;&nbsp;</li>
-            <li>
-                <button type="button"
-                        class="btn btn-primary navbar-btn"
-                        ng-click="newBoard()">
-                    <i class="fa fa-plus-circle"></i>
-                    New Board
-                </button>
+                <ul class="dropdown-menu" ng-show="isLoggedIn">
+                    <li>
+                        <a href ng-click="newStory()">
+                            Story
+                        </a>
+                    </li>
+                    <li>
+                        <a href ng-click="newWorklist()">
+                            Worklist
+                        </a>
+                    </li>
+                    <li>
+                        <a href ng-click="newBoard()">
+                            Board
+                        </a>
+                    </li>
+                    <li ng-show="currentUser.is_superuser">
+                        <a href="#!/project/new">
+                            Project
+                        </a>
+                    </li>
+                    <li ng-show="currentUser.is_superuser">
+                        <a href ng-click="newProjectGroup()">
+                            Project Group
+                        </a>
+                    </li>
+                </ul>
             </li>
         </ul>
 
@@ -136,17 +146,44 @@
                ng-hide="isLoggedIn">
                 <i class="fa fa-sign-in"></i>
             </a>
-            <a href="#" ng-click="newStory()"
-               class="btn btn-sm btn-primary navbar-btn">
+            <button type="button"
+                    ng-click="showMobileNewMenu = !showMobileNewMenu"
+                    class="btn btn-sm btn-primary navbar-btn">
                 <i class="fa fa-plus-circle"></i>
-                New Story
-            </a>
-            <a href="#" ng-click="newWorklist()"
-               class="btn btn-sm btn-primary navbar-btn">
-                <i class="fa fa-plus-circle"></i>
-                New Worklist
-            </a>
+                Create New...
+            </button>
             <a class="navbar-brand" href="#!/">StoryBoard</a>
+        </div>
+
+        <div collapse="!showMobileNewMenu" id="mobile-new-menu">
+            <ul class="nav navbar-nav" ng-show="isLoggedIn">
+                <li>
+                    <a href ng-click="newStory()">
+                        Story
+                    </a>
+                </li>
+                <li>
+                    <a href ng-click="newWorklist()">
+                        Worklist
+                    </a>
+                </li>
+                <li>
+                    <a href ng-click="newBoard()">
+                        Board
+                    </a>
+                </li>
+                <li ng-show="currentUser.is_superuser">
+                    <a href="#!/project/new"
+                       ng-click="showMobileNewMenu = false">
+                        Project
+                    </a>
+                </li>
+                <li ng-show="currentUser.is_superuser">
+                    <a href ng-click="newProjectGroup()">
+                        Project Group
+                    </a>
+                </li>
+            </ul>
         </div>
 
         <div collapse="!showMobileMenu" id="mobile-dropdown-menu">
