WIP: Nicer add card UI
Change-Id: I5253b557d659c5efc44b13fa58a8b010a4ed1d74

--- a/src/theme/base/boards_worklists.less
+++ b/src/theme/base/boards_worklists.less
@@ -136,6 +136,10 @@
     }
 }
 
+.new-item-search {
+    margin-left: 30px;
+}
+
 
 /* ng-sortable style */
 
@@ -149,4 +153,15 @@
     border-radius: 4px;
     box-sizing: border-box;
     background-color: #999;
+}
+
+.bg-primary {
+    > td {
+        > div > a {
+            color: #fff;
+        }
+        > table {
+            color: #000;
+        }
+    }
 }
