--- a/src/theme/base/boards_worklists.less
+++ b/src/theme/base/boards_worklists.less
@@ -51,7 +51,7 @@
     background-color: #ddd;
     border-radius: @border-radius-base;
     border: 1px solid #bbb;
-    width: 190px;
+    width: 240px;
     display: inline-block;
     vertical-align: top;
     white-space: normal;
@@ -76,11 +76,12 @@
 .kanban-lane-contents {
     max-height: 65vh;
     overflow-y: auto;
+    overflow-x: hidden;
     padding: 5px 0px 5px 10px;
     margin: 0px -0.1px 10px -10px;
     display: inline-block;
-    max-width: 180px;
-    min-width: 180px;
+    max-width: 230px;
+    min-width: 230px;
     min-height: 50px;
 }
 
@@ -114,15 +115,34 @@
     padding: 5px;
     margin: 5px 0px;
     background-color: #fff;
-    cursor: move;
     text-align: left;
     border-radius: @border-radius-base;
     border: 1px solid #bbb;
-    > div > user-typeahead > .form-group {
+    > div > .row > .col-xs-12 > user-typeahead > .form-group {
         margin-bottom: 0px;
-        margin-top: 10px;
+        margin-top: 0px;
         > .form-control-static {
             padding: 0px;
+        }
+    }
+}
+
+.kanban-card-due {
+/*    border-left: 10px solid #555;*/
+}
+
+.kanban-card-late {
+    border-right: @border-radius-base solid #555;
+    > div > div > div.target-date {
+        font-weight: bold;
+        color: @navbar-default-color;
+        background-color: @brand-primary;
+        border-radius: 10px; 
+        padding: 0px 5px;
+        margin: 0px 15px;
+
+        > i.text-muted {
+            color: @navbar-default-color;
         }
     }
 }
