--- a/src/theme/custom/theme.less
+++ b/src/theme/custom/theme.less
@@ -9,7 +9,7 @@
 // ============================== Bootstrap Overrides ==========================
 // Brand colors
 // -------------------------
-@brand-primary: #C43422;
+@brand-primary: #228b22;
 
 // == Container sizes
 @container-tablet:             ((720px + @grid-gutter-width - @navbar-fixed-side-width-sm));
@@ -115,6 +115,3 @@
 @input-height-h5:             (ceil(@font-size-h5 * @line-height-base) + (@padding-base-vertical * 2));
 @input-height-h6:             (ceil(@font-size-h6 * @line-height-base) + (@padding-base-vertical * 2));
 
-
-// Boards and worklists
-@card-detail-item-hover-color: #fdfdfd;
