--- a/src/app/boards/template/board_contents/kanban_lane_contents.html
+++ b/src/app/boards/template/board_contents/kanban_lane_contents.html
@@ -16,10 +16,12 @@
 <div as-sortable="cardsSortable"
      ng-model="lane.worklist.items"
      class="kanban-lane-contents">
-    <div class="kanban-card kanban-card-due kanban-card-late"
+    <div class="kanban-card"
+         ng-class="{'kanban-card-due': isDue(item), 'kanban-card-late': isLate(item)}"
          as-sortable-item
          ng-repeat="item in lane.worklist.items"
-         ng-switch="item.item_type">
+         ng-switch="item.item_type"
+         ng-click="showCardDetail(item)">
         <div as-sortable-item-handle ng-switch-when="story">
             <!--
             <button type="button" class="close" title="Remove"
@@ -36,7 +38,7 @@
                             ng-click="removeCard(lane.worklist, item)">
                         &times;
                     </button>
-                    <a href="#!/story/{{item.story.id}}">
+                    <a>
                         {{item.story.title}}
                     </a>
                 </div>
@@ -52,7 +54,7 @@
                             ng-click="removeCard(lane.worklist, item)">
                         &times;
                     </button>
-                    <a href="#!/story/{{item.task.story_id}}">
+                    <a>
                         {{item.task.title}}
                     </a>
                 </div>
@@ -65,11 +67,18 @@
                 </div>
                 -->
             </div>
-            <div class="row">
-            <div class="target-date">
-                <i class="fa fa-clock-o text-muted"></i>
-                &nbsp;&nbsp;Deliver demo - Apr 4
-            </div>
+            <div class="row target-date" ng-show="item.resolved_due_date">
+                <div class="col-xs-1">
+                    <i class="fa fa-clock-o text-muted"></i>
+                </div>
+                <div class="col-xs-10">
+                    <span time-moment
+                          eventdate="item.resolved_due_date.date"
+                          format-string="'MMM Do, YYYY'">
+                    </span>
+                    <br/>
+                    <span class="text-muted">{{item.resolved_due_date.name}}</span>
+                </div>
             </div>
             <div class="row">
             <div class="col-xs-12">
