--- a/src/app/boards/template/detail.html
+++ b/src/app/boards/template/detail.html
@@ -58,30 +58,46 @@
         </div>
         <div class="col-sm-4" style="margin-top: 20px">
             <small>
-            <table class="table table-fixed table-striped table-condensed">
+            <table class="table table-striped table-condensed">
             <thead>
-            <tr><th colspan="3">Target Dates</th></tr>
+            <tr><th colspan="5">Due Dates</th></tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Planning for thing</td>
-                    <td>6 March 2016</td>
-                    <td>15 cards</td>
+                <tr ng-repeat="dueDate in board.due_dates">
+                    <td ng-if="dueDate.name"
+                        class="col-xs-4">
+                        {{dueDate.name}}
+                    </td>
+                    <td ng-if="dueDate.name"
+                        class="col-xs-3">
+                        <span time-moment eventdate="dueDate.date"></span>
+                    </td>
+                    <td colspan="2"
+                        ng-if="!dueDate.name"
+                        class="col-xs-8">
+                        <span time-moment eventdate="dueDate.date"></span>
+                    </td>
+                    <td class="col-xs-3">
+                        {{dueDate.count}} cards
+                    </td>
+                    <td class="col-xs-1 text-right">
+                        <a href ng-click="editDueDate(dueDate)">
+                            <i class="fa fa-pencil"></i>
+                        </a>
+                    </td>
+                    <td class="col-xs-1 text-right">
+                        <a href ng-click="removeDueDate(dueDate)">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </td>
                 </tr>
-                <tr>
-                    <td>Deliver demo</td>
-                    <td>4 April 2016</td>
-                    <td>10 cards</td>
-                </tr>
-                <tr>
-                    <td>Deliver feature</td>
-                    <td>10 April 2016</td>
-                    <td>15 cards</td>
-                </tr>
-                <tr>
-                    <td>Final deadline</td>
-                    <td>17 April 2016</td>
-                    <td>10 cards</td>
+                <tr class="hover-row" ng-click="newDueDate()">
+                    <td colspan="5" class="text-center">
+                        <a href>
+                            <i class="fa fa-plus-circle"></i>
+                            New due date
+                        </a>
+                    </td>
                 </tr>
             </tbody>
             </table>
