--- a/src/app/due_dates/template/new.html
+++ b/src/app/due_dates/template/new.html
@@ -13,7 +13,7 @@
   ~ License for the specific language governing permissions and limitations
   ~ under the License.
   -->
-<div class="panel panel-default">
+<div class="panel panel-default due-date-modal">
     <div class="panel-heading">
         <button type="button" class="close" aria-hidden="true"
                 ng-click="close()">&times;</button>
@@ -96,7 +96,6 @@
                     </tr>
                     </tbody>
                 </table>
-                {{selected}}
             </div>
         </div>
         <div class="row">
